@@ -1,5 +1,5 @@
 // -*- coding: utf-8 -*-
-// Copyright (C) 2013-2022 Laboratoire de Recherche et Développement
+// Copyright (C) 2013-2023 Laboratoire de Recherche et Développement
 // de l'Epita (LRDE).
 //
 // This file is part of Spot, a model checking library.
@@ -53,7 +53,7 @@ implication-based simplifications are attempted.  Defaults to 16.") },
     { nullptr, 0, nullptr, 0, "Translation options:", 0 },
     { DOC("ltl-split", "Set to 0 to disable the translation of automata \
 as product or sum of subformulas.") },
-    { DOC("branch-prop", "Set to 0 to disable branching-postponement \
+    { DOC("branch-post", "Set to 0 to disable branching-postponement \
 (done during translation, may create more states) and delayed-branching \
 (almost similar, but done after translation to only remove states).  \
 Set to 1 to force branching-postponement, and to 2 \
